# nft_Marketplace_hakathon

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/nft-Marketplace-backend/: Cargo.toml
src/nft-Marketplace-backend/src/: http.rs  lib.rs
src/nft-Marketplace-frontend/: package.json
src/nft-Marketplace-frontend/src/: App.jsx
