[package]
name = "nft-Marketplace-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.11"
ic-certified-map = "0.4.0"
include-base64 = "0.1.0"
percent-encoding = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
sha2 = "0.10.8"
